Fixed spacing, css, and some other bugs in all sections

--- a/public/Assets/Styles/outfit.css
+++ b/public/Assets/Styles/outfit.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
+  margin: 0 auto 4%;
   padding: 5px;
   width: 85%;
   height: 10%;
